hubSide/force-app/main/default/objects/EquipmentCostType__c/EquipmentCostType__c.object-meta.xml
<CustomObject>
    <description>This object contains all the different equipment cost type. This object is maintained by an administrator.</description>
    <label>Type de Coût Equipement</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Type de Coût Equipement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Types de Coût Equipement</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>