hubSide/force-app/main/default/objects/EquipmentCostType__c/fields/ChangeableCost__c.field-meta.xml
<CustomField>
    <fullName>ChangeableCost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Coût Modifiable</label>
    <type>Checkbox</type>
</CustomField>