hubSide/force-app/main/default/objects/EquipmentCostType__c/fields/ManpowerCost__c.field-meta.xml
<CustomField>
    <fullName>ManpowerCost__c</fullName>
    <label>Coût Main d&apos;œuvre</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>