hubSide/force-app/main/default/objects/EquipmentCostType__c/fields/ValueLevel__c.field-meta.xml
<CustomField>
    <fullName>ValueLevel__c</fullName>
    <label>Niveau de Valeur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ValueLevel</valueSetName>
    </valueSet>
</CustomField>