hubSide/force-app/main/default/objects/EquipmentCostType__c/recordTypes/Exchange.recordType-meta.xml
<RecordType>
    <fullName>Exchange</fullName>
    <active>true</active>
    <label>Echange</label>
</RecordType>