hubSide/force-app/main/default/objects/EquipmentCostType__c/recordTypes/Repair.recordType-meta.xml
<RecordType>
    <fullName>Repair</fullName>
    <active>true</active>
    <label>Réparation</label>
</RecordType>