hubSide/force-app/main/default/objects/EquipmentCostType__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Object__c</columns>
    <columns>ValueLevel__c</columns>
    <columns>UnitCost__c</columns>
    <columns>ManpowerCost__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>