hubSide/force-app/main/default/objects/EquipmentCostType__c/listViews/Exchange.listView-meta.xml
<ListView>
    <fullName>Exchange</fullName>
    <columns>Object__c</columns>
    <columns>ValueLevel__c</columns>
    <columns>UnitCost__c</columns>
    <columns>ManpowerCost__c</columns>
    <columns>ChangeableCost__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>EquipmentCostType__c.Exchange</value>
    </filters>
    <label>Echange</label>
</ListView>