hubSide/force-app/main/default/objects/EquipmentCostType__c/listViews/Repair.listView-meta.xml
<ListView>
    <fullName>Repair</fullName>
    <columns>Object__c</columns>
    <columns>ValueLevel__c</columns>
    <columns>UnitCost__c</columns>
    <columns>ManpowerCost__c</columns>
    <columns>ChangeableCost__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>EquipmentCostType__c.Repair</value>
    </filters>
    <label>Réparation</label>
</ListView>